@@ -39,6 +39,7 @@ export MB_ORIG_PATH MB_PROD_LD_LIBRARY_PATH
 
 #
 # GCC environment variables
+# we will use this for hosting Project Center
 #
 #GCC_EXEC_PREFIX=$GNUSTEP_SYSTEM_ROOT/Libraries/$GNUSTEP_HOST_CPU/$GNUSTEP_HOST_OS/gcc-lib/
 #export GCC_EXEC_PREFIX
