@@ -1,9 +1,10 @@
 #! /bin/sh
 #
-# Copyright (C) 1997 Free Software Foundation, Inc.
+# Copyright (C) 1997, 1999 Free Software Foundation, Inc.
 #
+# Author: Scott Predescu <ovidiu@net-community.com>
 # Author: Ovidiu Predescu <ovidiu@net-community.com>
-# Date: October 1997
+# Date: February 1999
 # 
 # This file is part of the GNUstep Makefile Package.
 #
@@ -17,13 +18,13 @@
 # If not, write to the Free Software Foundation,
 # 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 
-# Try to execute the application passed as argument. The application is
+# Try to execute the GNUstep tool passed as argument. The tool is
 # searched through the GNUstep directories if a complete or relative path name
-# is not specified. The arguments passed after the application name are passed
-# unmodified to the application.
+# is not specified. The arguments passed after the tool name are passed
+# unmodified to the tool.
 
 if [ -z "$1" ]; then
-  echo usage: `basename $0` [--library-combo=...] application [arguments...]
+  echo usage: `basename $0` [--library-combo=...] tool [arguments...]
   echo `basename $0` --help for help
   exit 1
 fi
@@ -31,14 +32,11 @@ fi
 if [ -z "$EXEEXT" ]; then
   EXEEXT=@EXEEXT@
 fi
-if [ -z "$LIBRARY_COMBO" ]; then
-  LIBRARY_COMBO=@ac_cv_library_combo@
-fi
 
-# trap the --library-combo parameter
+# traps the parameters
 case $1 in
   --help)
-    echo usage: `basename $0` [--library-combo=...] application [arguments...]
+    echo usage: `basename $0` [--library-combo=...] tool [arguments...]
     echo
     echo [--library-combo=...] specifies a GNUstep backend to use.
     echo It overrides the default LIBRARY_COMBO environment variable.
@@ -48,23 +46,23 @@ case $1 in
     echo --library-combo=fd-xdps for GNUstep XDPS Backend with libFoundation
     echo --library-combo=nx for NeXT OPENSTEP
     echo
-    echo application is the complete or relative name of the application
-    echo program with the .app extension, like Edit.app.
+    echo tool is the complete or relative name of the tool executable
+    echo without any extension, like dread.
     echo
-    echo [arguments...] are the arguments to the application.
+    echo [arguments...] are the arguments to the tool.
     exit 0
     ;;
   --library-combo=*)
     LIBRARY_COMBO=`echo $1 | sed 's/--library-combo=//'`
     if [ -z "$2" ]; then
-      echo usage: `basename $0` [--library-combo=...] application [arguments...]
+      echo usage: `basename $0` [--library-combo=...] tool [arguments...]
       echo `basename $0` --help for help
       exit 1
     fi
-    app=$2; shift; shift
+    tool=$2; shift; shift
     ;;
   *)
-    app=$1; shift;;
+    tool=$1; shift;;
 esac
 
 # TODO: these defaults need to be output to the user
@@ -81,32 +79,11 @@ elif [ "$LIBRARY_COMBO" = fd-xdps ]; then
 fi
 export LIBRARY_COMBO
 
-# Remove leading slashes at the end of the application name
-app=`echo $app | sed 's%/*$%%'`
+# Remove leading slashes at the end of the tool name
+tool=`echo $tool | sed 's%/*$%%'`
 
 if [ -z "$EXEEXT" ]; then
-  app=$app$EXEEXT
-fi
-
-case $app in
-  /*)	# An absolute path.
-	full_appname=$app;;
-  */*)	# A relative path
-	full_appname=`(cd $app; pwd)`;;
-  *)	# A path that should be searched into the GNUstep paths
-	SPATH=.:$GNUSTEP_USER_ROOT/Apps:$GNUSTEP_LOCAL_ROOT/Apps:$GNUSTEP_SYSTEM_ROOT/Apps:$PATH
-	IFS=:
-	for dir in $SPATH; do
-	  if [ -d $dir/$app ]; then
-	    full_appname=`(cd $dir/$app; pwd)`
-	    break;
-	  fi
-	done;;
-esac
-
-if [ -z "$full_appname" ]; then
-  echo "Can't find the required application: $app!"
-  exit 1
+  tool=$tool$EXEEXT
 fi
 
 #
@@ -133,45 +110,48 @@ if [ -z "$GNUSTEP_HOST_OS" ]; then
 fi
 
 if [ "$LIBRARY_COMBO" = nx-nx-nx-nil -a $GNUSTEP_HOST_OS = nextstep4 ]; then
-  if [ -f "$full_appname/library_paths.openapp" ]; then
-    additional_library_paths="`cat $full_appname/library_paths.openapp`"
+  if [ -f "$full_toolname/library_paths.openapp" ]; then
+    additional_library_paths="`cat $full_toolname/library_paths.openapp`"
   fi
 else
-  if [ -f "$full_appname/$GNUSTEP_HOST_CPU/$GNUSTEP_HOST_OS/$LIBRARY_COMBO/library_paths.openapp" ]; then
-    additional_library_paths="`cat $full_appname/$GNUSTEP_HOST_CPU/$GNUSTEP_HOST_OS/$LIBRARY_COMBO/library_paths.openapp`"
+  if [ -f "$full_toolname/$GNUSTEP_HOST_CPU/$GNUSTEP_HOST_OS/$LIBRARY_COMBO/library_paths.openapp" ]; then
+    additional_library_paths="`cat $full_toolname/$GNUSTEP_HOST_CPU/$GNUSTEP_HOST_OS/$LIBRARY_COMBO/library_paths.openapp`"
   fi
 fi
 
-# get base app name
-appname=`echo $app | sed 's/\.[a-z]*$//'`
-appname=`basename $appname`
+case $tool in
+  /*)	# An absolute path.
+  	full_toolname=$tool;;
+  */*)	# A relative path
+	full_toolname=`(cd $tool; pwd)`;;
+  *)	# A path that should be searched into GNUstep tool paths
+	GNUSTEP_HOST_DIR=$GNUSTEP_HOST_CPU/$GNUSTEP_HOST_OS
+	SPATH=./$GNUSTEP_HOST_DIR
+	SPATH=./$GNUSTEP_HOST_DIR/$LIBRARY_COMBO
+	SPATH=$SPATH:$GNUSTEP_USER_ROOT/Tools/$GNUSTEP_HOST_DIR
+	SPATH=$SPATH:$GNUSTEP_USER_ROOT/Tools/$GNUSTEP_HOST_DIR/$LIBRARY_COMBO
+	SPATH=$SPATH:$GNUSTEP_LOCAL_ROOT/Tools/$GNUSTEP_HOST_DIR
+	SPATH=$SPATH:$GNUSTEP_LOCAL_ROOT/Tools/$GNUSTEP_HOST_DIR/$LIBRARY_COMBO
+	SPATH=$SPATH:$GNUSTEP_SYSTEM_ROOT/Tools/$GNUSTEP_HOST_DIR
+	SPATH=$SPATH:$GNUSTEP_SYSTEM_ROOT/Tools/$GNUSTEP_HOST_DIR/$LIBRARY_COMBO
+	SPATH=$SPATH:$PATH
+	IFS=:
+	for dir in $SPATH; do
+	  if [ -x $dir/$tool ]; then
+	    full_toolname=$dir/$tool;
+	    break;
+	  fi
+	done;;
+esac
+
+if [ -z "$full_toolname" ]; then
+  echo "Can't find the required tool: $tool!"
+  exit 1
+fi
 
 # Load up LD_LIBRARY_PATH
 # this needs to be PATH on NT
 . $GNUSTEP_SYSTEM_ROOT/Makefiles/ld_lib_path.sh
 
-if [ "$LIBRARY_COMBO" = nx-nx-nx-nil -a $GNUSTEP_HOST_OS = nextstep4 ]; then
-  if [ ! -f $full_appname/$appname ]; then
-    echo "$full_appname application does not have a binary for this kind of machine and operating system."
-    exit 1
-  fi
-
-  IFS=" "
-  $full_appname/$appname $@
-
-else
-  # Determine if the application has a binary for this operating system
-  if [ ! -d $full_appname/$GNUSTEP_HOST_CPU/$GNUSTEP_HOST_OS ]; then
-    echo "$full_appname application does not have a binary for this kind of machine and operating system."
-    exit 1
-  fi
-
-  if [ ! -d $full_appname/$GNUSTEP_HOST_CPU/$GNUSTEP_HOST_OS/$LIBRARY_COMBO ]; then
-    echo "$full_appname application does not have a binary for this combination of libraries: $LIBRARY_COMBO."
-    exit 1
-  fi
-
-  IFS=" "
-  $full_appname/$GNUSTEP_HOST_CPU/$GNUSTEP_HOST_OS/$LIBRARY_COMBO/$appname $@
-
-fi
+IFS=" "
+$full_toolname $@
